Align complete layout correctly

--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -8,7 +8,7 @@
 
   display: grid;
   grid-template-columns: 1fr 4fr;
-  grid-template-rows: 2fr 1fr 10fr 1fr;
+  /* grid-template-rows: 2fr 1fr 10fr 1fr; */
   gap: 4px;
 }
 
@@ -25,14 +25,27 @@
   grid-column: 1 / 3;
   grid-row: 1 / 2;
 
+
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr 3fr;
+  justify-items: stretch;
+  align-items: center;
+}
+.logo {
+  justify-self: start;
 }
 
 .menu ul,
 .menu li {
   font-size: 16px;
 
-  grid-column: 2 / 3;
-  grid-row: 2 / 3;
+}
+
+.menu ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-items: start;
 }
 
 .sidebar {
@@ -40,6 +53,11 @@
 
   grid-column: 1 / 2;
   grid-row: 2 / 4;
+
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(auto-fit, 1fr);
+  gap: 50px;
 }
 
 .sidebar .photo {
@@ -56,6 +74,10 @@
   color: black;
   font-size: 16px;
   font-weight: normal;
+
+  display: grid;
+  align-items: center;
+
 }
 
 .nav {
@@ -76,10 +98,8 @@
 }
 
 .nav ul {
-
     /*to one row grid*/
     display: grid;
-    grid-template-rows: 1fr;
     grid-template-columns: repeat(3, 1fr);
 }
 
@@ -92,9 +112,9 @@
   /*converting the article to a grid also*/
   display: grid;
   gap: 15px;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
-  align-content: center;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+
 }
 
 .article p {
@@ -128,6 +148,11 @@
 
   grid-row: 4 / 5;
   grid-column: 1 / 3;
+
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  align-items: center;
 }
 
 .footer p {
